css/style.css
/* ... */
  .information p {
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 24px; }
  .information ul {
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    display: block;
    width: 100%;
    list-style: none;
    overflow: hidden; }
    .information ul li {
      display: inline-block;
      width: 24.5%;
      margin-bottom: 36px;
      vertical-align: middle;
      text-align: center; }
      .information ul li .logo {
        display: inline-block; }
        .information ul li .logo img {
          height: 100px; }
        .information ul li .logo.square img {
          width: 100px; }
        .information ul li .logo.rectangle img {
          width: 150px; }
        .information ul li .logo a {
          font-weight: bold; }
      .information ul li .icon {
        display: inline-block;
        width: 100px;
        height: 100px;
        background-image: url(../img/icons-3.png);
        background-size: 200px 200px; }
      .information ul li .shrimp, .information ul li .noodles {
        background-position-x: -100px; }
      .information ul li .lobster, .information ul li .noodles {
        background-position-y: -100px; }
      @media screen and (max-width: 767px) {
        .information ul li {
          width: 30%; } }
      @media screen and (max-width: 560px) {
        .information {
          padding: 48px 28px; }
        .information ul li {
          width: 49%; }
        .informationn ul li div:not(.hide) ~ div {
          display: none;} }

.photos {
  height: 300px;
  overflow: hidden;
  position: relative;
  background-color: rgba(77,184,112, .3); }
  .photos a {
    text-align: center;
    display: block;
    color: #ffffff;
    font-weight: 400;
    font-size: 28px;
    line-height: 300px;
    width: 100%;
    height: 100%; }
    .photos a::after {
      display: inline-block;
      vertical-align: middle;
      content: "";
      width: 12px;
      height: 12px;
      border-top: 1px solid #ffffff;
      border-right: 1px solid #ffffff;
      -webkit-transform: rotate(45deg);
      -moz-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
      -o-transform: rotate(45deg);
      transform: rotate(45deg); }

.photos-grid {
  position: absolute;
  top: 0;
  font-size: 0;
  width: 100%;
  z-index: -1; }
.photos-grid div {
  display: inline-block;
  background-size: cover;
  background-position: center top;
  width: 25%;
  height: 30vw;
}
@media all and (max-width: 1024px) {
  .photos-grid div {
    width: 33.333%;
    height: 40vw; }
}
@media all and (max-width: 479px) {
  .photos-grid div {
    width: 50%;
    height: 50vw; }
}
.grid1 {
  background-image: url(../img/grid1.jpg); }
.grid2 {
  background-image: url(../img/grid2.jpg); }
.grid3 {
  background-image: url(../img/grid3.jpg); }
.grid4 {
  background-image: url(../img/grid4.jpg); }
.grid5 {
  background-image: url(../img/grid5.jpg); }
.grid6 {
  background-image: url(../img/grid6.jpg); }
.grid7 {
  background-image: url(../img/grid7.jpg); }
.grid8 {
  background-image: url(../img/grid8.jpg); }
.grid9 {
  background-image: url(../img/grid9.jpg); }
.grid10 {
  background-image: url(../img/grid10.jpg); }
.grid11 {
  background-image: url(../img/grid11.jpg); }
.grid12 {
  background-image: url(../img/grid12.jpg); }

.more {
  background: rgb(40,40,40);
  color: #ffffff;
  padding: 48px;
  line-height: 36px; }
  .more h3 {
    font-size: 28px;
    font-weight: 300;
    margin-bottom: 48px;
    text-align: center; }
  .more p {
    margin-bottom: 24px; }
  .more ul {
    display: block;
    width: 100%;
    list-style: none;
    margin-bottom: 36px;
    overflow: hidden; }
    .more ul li {
      display: block;
      width: 25%;
      padding: 12px 0;
      float: left;
      text-align: center; }
      .more ul li .icon {
        display: inline-block;
        width: 150px;
        height: 150px;
        background-size: 150px 150px; }
      .more ul li .food {
        background-image: url(../img/food.png); }
      .more ul li .drink {
        background-image: url(../img/drink.png); }
      .more ul li .memories {
        background-image: url(../img/memories.png); }
      .more ul li .and-more {
        background-image: url(../img/and-more.png); }
      @media screen and (max-width: 480px) {
        .more ul li {
          width: 100%; } }

.social {
  padding: 48px 0;
  margin: 0 auto;
  width: 55%; }

.eventbrite, .thanks {
  padding: 48px; }
  .eventbrite h3, .thanks h3 {
    font-size: 28px;
    font-weight: 300;
    margin-bottom: 48px;
    text-align: center; }
  .eventbrite .columns, .thanks .columns {
    width: 100%; }
    .eventbrite .columns .column, .thanks .columns .column {
      width: 50%; }
      .eventbrite .columns .column p, .thanks .columns .column p {
        font-size: 20px;
        text-align: center; }
      .eventbrite .columns .column img, .thanks .columns .column img {
        display: inline-block;
        height: auto;
        margin: 0 auto;
        width: 400px; }
  .eventbrite iframe {
    min-height: 250px;
  }

.center {
  float: none;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.left {
  float: left; }

.right {
  float: right; }

.red {
  color: red; }

.hide {
  display: none !important; }

